Video alignment fix;

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,6 +21,21 @@ h1, h2, h3, h4 {
     padding: 0;
 }
 
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    width: max-content;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 @media print {
     :root {
         --bs-body-color: #000;
